# Laserlogin

./: .gitignore  Cargo.toml  README.md  Rocket.toml  TO_REFACTOR.md  db.db  first_user
lib/sqlite-derive/: Cargo.toml
lib/sqlite-derive/src/: lib.rs
lib/sqlite-traits/: Cargo.toml
lib/sqlite-traits/src/: db_object.rs  dbobject.rs  lib.rs  persistence_provider.rs  pool.rs  query.rs  sql_object.rs  sql_types.rs
src/: login_users.rs  main.rs
src/model/: config.rs  log.rs  mod.rs  user.rs
static/: colors.css  global.css  globals.js  messages.js
static/font/: Raleway.css  Roboto.css
templates/: base.hbs  login.html  logs.hbs  overview.hbs  status.html  usersettings.hbs
